[gd_scene load_steps=8 format=3 uid="uid://7nyt06yrvxoe"]

[ext_resource type="Script" uid="uid://detwkow5vccvj" path="res://Script/options_menu.gd" id="1_plplt"]
[ext_resource type="Texture2D" uid="uid://cpfgui1p7coq2" path="res://Assets/PNG/MiniWindow.tres" id="1_uj0ok"]
[ext_resource type="StyleBox" uid="uid://b3o425awntv5o" path="res://BoxSinFondo.tres" id="3_l1wg4"]
[ext_resource type="Texture2D" uid="uid://dnqjn288i6cu0" path="res://Assets/PNG/0.png" id="4_inh3s"]
[ext_resource type="Theme" uid="uid://cqoasn3fnuyo3" path="res://Font/PixelArtFont.tres" id="4_m6e8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m6e8v"]
atlas = ExtResource("4_inh3s")
region = Rect2(1813, 473, 9, 9)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l1wg4"]
texture = ExtResource("1_uj0ok")

[node name="OptionsMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -277.0
offset_right = 279.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_plplt")

[node name="BackButton2" type="Button" parent="."]
unique_name_in_owner = true
z_index = 2
layout_mode = 2
offset_left = 504.0
offset_top = 22.0
offset_right = 543.0
offset_bottom = 55.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/normal = ExtResource("3_l1wg4")
icon = SubResource("AtlasTexture_m6e8v")
icon_alignment = 1
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("4_m6e8v")
theme_override_styles/panel = SubResource("StyleBoxTexture_l1wg4")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Audio" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Configuracion de Audio"

[node name="AudioContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/AudioContainer"]
layout_mode = 2
text = "Volume"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/VBoxContainer/AudioContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.001
max_value = 1.0
step = 0.01
value = 0.501

[node name="MusicContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
text = "Musica"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/VBoxContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.001
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
text = "Efectos"

[node name="SfxSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SFXContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Video" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Configuracion de Video"

[node name="VideoContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolucion" type="Label" parent="PanelContainer/VBoxContainer/VideoContainer"]
layout_mode = 2
text = "Resolucion"

[node name="ResolutionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/VideoContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FullscreenToggle" type="CheckBox" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pantalla Completa"

[node name="VSyncToggle" type="CheckBox" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Vsync"

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Atras"
